# Project-Aegis

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  README.pypi_redirect.md  README.zh-TW.md  SECURITY.md  build_ext.py  glama.json  hatch_build.py  main.py  pyproject.toml  run_parallel.sh  setup_cython.py
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-wheels.yml  test.yml
aegis/: client.py  injector.py  mcp_server.py
aegis/core/: state.py
config/: doctor-remediation.yaml
dashboard/: app.py  dashboard.css  dashboard.js  index.html  server.py
docs/: CATEGORIES_COOKBOOK.md  DOCTOR.md  GUARDRAIL_BENCHMARK.md  HALL_OF_FAME.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.zh-TW.md  VAULT_THREAT_MODEL.md  openclaw-skill.md
examples/: agent_vault_flow.py  e2e_demo.py  e2e_stripe_injection.py
pop-pay-skill/: SKILL.md  _meta.json
pop_pay/: __init__.py  cli.py  cli_doctor.py  cli_main.py  cli_vault.py  client.py  injector.py  mcp_server.py  vault.py
scripts/: build_pypi_readme.py  test_llm_guardrails.py
skills/: ask_cli.sh  test_and_fix.sh
tests/: conftest.py  test_audit_and_migration.py  test_cli.py  test_dashboard_api.py  test_guardrails.py  test_integration.py  test_llm_guardrails_typed_errors.py  test_models.py  test_p0_fixes.py  test_providers.py  test_rc2_refactor.py  test_rename_smoke.py  test_scan_page.py  test_stripe_real.py  test_toctou.py  test_v03_features.py  test_vault.py  test_vault_core.py  test_vault_f13_format.py
(+21 files in other folders)
