[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-pay"
version = "0.1.0"
description = "Project Aegis (AgentPay) SDK"
dependencies = [
    "pydantic",
    "langchain-core",
    "stripe",
    "openai",
    "tenacity>=9.1.4",
    "mcp>=1.26.0",
    "streamlit>=1.55.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.hatch.build.targets.wheel]
packages = ["aegis"]
