[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-pay"
version = "0.2.0"
description = "Semantic Payment Guardrail for AI Agents"
authors = [{name="Aegis Team"}]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
llm = ["openai", "tenacity>=9.1.4"]
stripe = ["stripe"]
langchain = ["langchain-core"]
mcp = ["mcp>=1.26.0"]
dashboard = ["streamlit>=1.55.0"]
dev = ["pytest", "pytest-asyncio"]
all = ["aegis-pay[llm,stripe,langchain,mcp,dashboard]"]

[tool.hatch.build.targets.wheel]
packages = ["aegis"]
